front-conserve-cloud/deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: conservecloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: conservecloud-frontend:latest   # ex: monrepo/front:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 4000
