front-conserve-cloud/deploy/k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: conservecloud
spec:
  parentRefs:
    - name: tp-gateway
  hostnames:
    - "web-cath.10.108.49.188.nip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 80
